test2/private.yaml
apiVersion: v1
kind: Pod
metadata:
  name: private-node
  labels:
    app: app
spec:
  imagePullSecrets:
  - name: regcred
  containers:
  - name: private-node
    image: vcats/egate-api:1.1.2
    resources: {}
    # command: [""]
    # args: ["-c", "npm run start"]
  - name: mongo-node
    image: mongo
    resources:
          limits:
            memory: "1000Mi"
            cpu: "1000m"
    ports:
      - containerPort: 27017
