test2/sample.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    meta.helm.sh/release-name: traefik
    meta.helm.sh/release-namespace: kube-system
  creationTimestamp: "2022-06-13T09:56:12Z"
  labels:
    app.kubernetes.io/instance: traefik
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: traefik
    helm.sh/chart: traefik-10.19.300
  name: traefik
  namespace: kube-system
  resourceVersion: "65080"
  uid: 05a5fed0-b844-4d60-b5b4-09aa5ef0c1b4
spec:
  allocateLoadBalancerNodePorts: true
  clusterIP: 10.43.189.54
  clusterIPs:
  - 10.43.189.54
  externalTrafficPolicy: Cluster
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - name: web
    nodePort: 32455
    port: 80
    protocol: TCP
    targetPort: web
  - name: websecure
    nodePort: 30364
    port: 443
    protocol: TCP
    targetPort: websecure
  selector:
    app.kubernetes.io/instance: traefik
    app.kubernetes.io/name: traefik
  sessionAffinity: None
  type: LoadBalancer
status:
  loadBalancer:
    ingress:
    - ip: 103.130.218.163
    - ip: 139.180.192.176
    - ip: 149.28.147.111
