test2/sv2.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-controller
spec:
  selector:
    app: nginx-controller 
  type: NodePort
  ports:
  - name: nginx
    protocol: TCP
    port: 80
    targetPort: 80
    nodePort: 30000
