test2/sv3.yaml
apiVersion: v1
kind: Service
metadata:
  name: argicd-controller
spec:
  selector:
    app: argocd-server 
  type: NodePort
  ports:
  - name: nginx
    protocol: TCP
    port: 80
    targetPort: 80
    nodePort: 30000
