test2/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  # namespace: registry
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
    - host: test.e-gate.vn
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: deployapp-service
              port:
                number: 30080
