test2/teledrive.yaml
# apiVersion: apps/v1
# kind: Deployment
# metadata:
#   # tên của deployment
#   name: deployapp
# spec:
#   # số POD tạo ra
#   replicas: 1
#   # thiết lập các POD do deploy quản lý, là POD có nhãn  "app=deployapp"
#   selector:
#     matchLabels:
#       app: deployapp
#   # Định nghĩa mẫu POD, khi cần Deploy sử dụng mẫu này để tạo Pod
#   template:
#     metadata:
#       name: podapp
#       labels:
#         app: deployapp
#     spec:
#       containers:
#       - name: postgres
#         image: postgres:alpine3.16
#         resources:
#           limits:
#             memory: "300Mi"
#             cpu: "300m"
#         env: 
#           - name: POSTGRES_PASSWORD
#             value: "123asd"
#         # command: ["/bin/bash"]
#         # args: ["-c", "while true; do echo 'busybox running'; sleep 10;done"]
#         ports:
#           - containerPort: 5432
# ---
apiVersion: apps/v1
kind: Deployment
metadata:
  # tên của deployment
  name: app-tele
spec:
  # số POD tạo ra
  replicas: 1
  # thiết lập các POD do deploy quản lý, là POD có nhãn  "app=deployapp"
  selector:
    matchLabels:
      app: app-tele
  # Định nghĩa mẫu POD, khi cần Deploy sử dụng mẫu này để tạo Pod
  template:
    metadata:
      name: app-tele
      labels:
        app: app-tele
    spec:
      containers:
      - name: app-tele
        image: vcats/teledrive:1.0.5
        resources:
          limits:
            memory: "300Mi"
            cpu: "300m"
        ports:
          - containerPort: 4000
---
apiVersion: v1
kind: Service
metadata:
  name: tele-service
spec:
  selector:
    app: app-tele
  type: NodePort
  ports:
  - name: tele
    protocol: TCP
    port: 4000 
    nodePort: 32593
---
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: tele-ingress
spec:
  routes:
  - kind: Rule
    match: Host(`tele.e-gate.vn`)    # [3]
    priority: 10                    # [4]
    services:
    - name: tele-service
      port: 4000
